<resources>
    <string name="app_name">Hestia</string>
    <!-- firebase strings -->
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <!-- HAHA -->

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>



    <string name="test_paragraph">
     But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a
        complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of
        human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure
    </string>
    <string name="test_paragraph_long">
        But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a
        complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of
        human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not
        know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves
        or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil
        and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise,
        except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has
        no annoying consequences, or one who avoids a pain that produces no resultant pleasure?
    </string>


    <string name="filter_date">Date</string>
    <string name="filter_cost">Cost</string>
    <string name="filter_class">Class</string>

    <string name="filter_expansion">Expansion</string>

    <string name="sort_cost">Expansion</string>

    <string name="druid">druid</string>
    <string name="hunter">hunter</string>
    <string name="mage">mage</string>
    <string name="paladin">paladin</string>
    <string name="priest">priest</string>
    <string name="rogue">rogue</string>
    <string name="shaman">shaman</string>
    <string name="warlock">warlock</string>
    <string name="warrior">warrior</string>

    <string name="standard">standard</string>
    <string name="wild">wild</string>

    <string name="search">search</string>



</resources>
