<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/new_deck_enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="DeckName"/>

    <RadioGroup
        android:id="@+id/new_deck_class_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/new_deck_radio_druid"
            android:text="@string/druid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_hunter"
            android:text="@string/hunter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_mage"
            android:text="@string/mage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_paladin"
            android:text="@string/paladin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_priest"
            android:text="@string/priest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_rogue"
            android:text="@string/rogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_shaman"
            android:text="@string/shaman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_warlock"
            android:text="@string/warlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_radio_warrior"
            android:text="@string/warrior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/new_deck_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/new_deck_standard">
        <RadioButton
            android:id="@+id/new_deck_standard"
            android:text="@string/standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/new_deck_wild"
            android:text="@string/wild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>


    <Button
        android:id="@+id/new_deck_submit"
        android:text="Create!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>